--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm David Freeman
+title: Hello, world! I'm Buse Balci
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -9,14 +9,14 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Buse Balci # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I am an Analytics Consultant at Applied Predictive Technologies and a Ms. Analytics Graduate from University of Toronto
 social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
+social-facebook: https://www.facebook.com/busebalci526
 social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-linkedin: https://www.linkedin.com/in/busebalci/
+social-email: balcibuse@outlook.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
